judger_pipe/tmp/user/27/1792/compiler_error_1792
./tmp/user/27/1792/Main.java:9: error: incompatible types
while(1);
      ^
  required: boolean
  found:    int
1 error
